Add prebuild step

--- a/.github/workflows/flutter_build_android_with_flavors.yaml
+++ b/.github/workflows/flutter_build_android_with_flavors.yaml
@@ -15,6 +15,10 @@ on:
         required: false
         default: 'lib/main.dart'
         type: string
+      pre_build_script:
+        required: false
+        default: ''
+        type: string
 
     secrets:
       android_key_asc:
@@ -39,6 +43,8 @@ jobs:
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+      - name: Prebuild Script
+        run: sh ${{inputs.pre_build_script}}
       - name: Flutter Packages Get
         run: flutter packages get
       - name: Decrypt keystore
