--- a/.github/workflows/flutter_build_ios_with_flavors.yaml
+++ b/.github/workflows/flutter_build_ios_with_flavors.yaml
@@ -19,6 +19,10 @@ on:
         required: false
         default: ''
         type: string
+      pre_build_params:
+        required: false
+        default: ''
+        type: string
       custom_build_args:
         required: false
         default: ''
@@ -52,7 +56,7 @@ jobs:
           channel: 'stable'
       - name: Prebuild Script
         if: ${{ inputs.pre_build_script != ''}}
-        run: sh ${{inputs.pre_build_script}}
+        run: sh ${{inputs.pre_build_script}} ${{inputs.pre_build_params}}
       - name: Flutter Packages Get
         run: flutter packages get
       - name: Install the Apple certificate and provisioning profile
