--- a/.github/workflows/flutter_build_ios_with_flavors.yaml
+++ b/.github/workflows/flutter_build_ios_with_flavors.yaml
@@ -45,6 +45,8 @@ on:
         required: true
       p12_password:
         required: true
+      pre_build_params:
+        required: false
 
 jobs:
   build:
@@ -56,7 +58,7 @@ jobs:
           channel: 'stable'
       - name: Prebuild Script
         if: ${{ inputs.pre_build_script != ''}}
-        run: sh ${{inputs.pre_build_script}} ${{inputs.pre_build_params}}
+        run: sh ${{inputs.pre_build_script}} ${{secrets.pre_build_params}}
       - name: Flutter Packages Get
         run: flutter packages get
       - name: Install the Apple certificate and provisioning profile
