--- a/.github/workflows/flutter_build_ios_with_flavors.yaml
+++ b/.github/workflows/flutter_build_ios_with_flavors.yaml
@@ -94,6 +94,11 @@ jobs:
           cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
       - run: flutter build ipa --release --no-codesign --flavor=${{ inputs.environment }} --build-number=$GITHUB_RUN_NUMBER --export-options-plist=ios/export_options.plist -t ${{ inputs.target }} ${{inputs.custom_build_args}}
         working-directory: ${{ inputs.app-dir }}
+      - run: |
+          la ./ios
+          la ./build
+          la ./build/ios/ipa
+        working-directory: ${{ inputs.app-dir }}
       - name: 'Upload app to TestFlight'
         uses: apple-actions/upload-testflight-build@v1
         with:
