Print build files ios

--- a/.github/workflows/flutter_build_ios_with_flavors.yaml
+++ b/.github/workflows/flutter_build_ios_with_flavors.yaml
@@ -97,6 +97,8 @@ jobs:
       - run: |
           ls -la ./ios
           ls -la ./build/ios
+          ls -la ./build/archive
+          ls -la ./build/ios
         working-directory: ${{ inputs.app-dir }}
       - name: 'Upload app to TestFlight'
         uses: apple-actions/upload-testflight-build@v1
