--- a/.github/workflows/flutter_build_ios_with_flavors.yaml
+++ b/.github/workflows/flutter_build_ios_with_flavors.yaml
@@ -100,7 +100,7 @@ jobs:
       - name: 'Upload app to TestFlight'
         uses: apple-actions/upload-testflight-build@v1
         with:
-          app-path: ${{ inputs.app-dir }}/${{ inputs.app-path }}
+          app-path: ${{ inputs.app-dir }}${{ inputs.app-path }}
           issuer-id: ${{ secrets.app_store_issuer_id}}
           api-key-id: ${{ secrets.app_store_api_key_id}}
           api-private-key: ${{ secrets.app_store_api_private_key}}
