--- a/.github/workflows/flutter_build_android_without_flavors.yaml
+++ b/.github/workflows/flutter_build_android_without_flavors.yaml
@@ -64,7 +64,7 @@ jobs:
         uses: r0adkll/upload-google-play@v1.0.16
         with:
           serviceAccountJsonPlainText: ${{ secrets.play_store_gservice_account }}
-          releaseFile: ${{inputs.app-dir}}/build/app/outputs/bundle/${{inputs.environment}}Release/app-${{inputs.environment}}-release.aab
+          releaseFile: ${{inputs.app-dir}}/build/app/outputs/bundle/release/app-release.aab
           status: 'draft'
           track: internal
           packageName: ${{inputs.packageName}}
