--- a/.github/workflows/flutter_build_android_with_flavors_and_signing.yaml
+++ b/.github/workflows/flutter_build_android_with_flavors_and_signing.yaml
@@ -60,6 +60,7 @@ jobs:
           echo "${{secrets.android_keystore_asc}}" > upload-keystore.jks.asc
           gpg -d --passphrase "${{ secrets.android_key_passphrase }}" --batch key.properties.asc > key.properties
           gpg -d --passphrase "${{ secrets.android_keystore_passphrase }}" --batch upload-keystore.jks.asc > upload-keystore.jks
+          mkdir ${{inputs.app-dir}}/build/app/outputs/bundle/${{inputs.environment}}Release
           cp upload-keystore.jks ${{inputs.app-dir}}/build/app/outputs/bundle/${{inputs.environment}}Release/signingKey.jks
           export ALIAS=$(awk -F "=" '/^keyAlias/{print $NF}' key.properties)
           export KEY=$(awk -F "=" '/^keyPassword/{print $NF}' key.properties)
