--- a/.github/workflows/flutter_build_android_with_flavors_and_signing.yaml
+++ b/.github/workflows/flutter_build_android_with_flavors_and_signing.yaml
@@ -65,10 +65,12 @@ jobs:
           export ALIAS=$(awk -F "=" '/^keyAlias/{print $NF}' key.properties)
           export KEY=$(awk -F "=" '/^keyPassword/{print $NF}' key.properties)
           export STORE_FILE=$(awk -F "=" '/^storeFile/{print $NF}' key.properties)
-          export BASE64_STORE=$(base64 upload-keystore.jks)
+          export BASE64_STORE=$(openssl base64 < upload-keystore.jks | tr -d '\n' | tee upload-keystore.jks.base64.txt)
         working-directory: ${{ inputs.app-dir }}/android
       - name: Android Build
         run: flutter build appbundle --release --flavor=${{ inputs.environment }} --build-number=$GITHUB_RUN_NUMBER -t ${{ inputs.target }} ${{inputs.custom_build_args}}
+      - name: print stuff
+        run: echo $ALIAS && echo $KEY
       - uses: r0adkll/sign-android-release@v1
         name: Sign app APK
         with:
