--- a/.github/workflows/flutter_build_android_with_flavors_and_signing.yaml
+++ b/.github/workflows/flutter_build_android_with_flavors_and_signing.yaml
@@ -75,7 +75,7 @@ jobs:
         uses: r0adkll/upload-google-play@v1.0.16
         with:
           serviceAccountJsonPlainText: ${{ secrets.play_store_gservice_account }}
-          releaseFile: ${{steps.sign_app.outputs.signedReleaseFile}}
+          releaseFile: ${{inputs.app-dir}}/build/app/outputs/bundle/${{inputs.environment}}Release/app-${{inputs.environment}}-release.aab
           status: 'draft'
           track: internal
           packageName: ${{inputs.packageName}}
