--- a/.github/workflows/flutter_build_android_with_flavors_and_signing.yaml
+++ b/.github/workflows/flutter_build_android_with_flavors_and_signing.yaml
@@ -73,11 +73,12 @@ jobs:
         working-directory: ${{ inputs.app-dir }}/android
       - name: Fetch Build Number
         if: ${{ inputs.build_number_api_url != '' }}
-        run: touch count.json && curl ${{ inputs.build_number_api_url }} > count.json && cat count.json | jq .value && export GITHUB_RUN_NUMBER=$(cat count.json | jq .value)
+        run: touch count.json && curl ${{ inputs.build_number_api_url }} > count.json && cat count.json | jq .value
       - name: Android Build
         run: |
           export BUILD_NUMBER=$GITHUB_RUN_NUMBER
           test -f count.json && export NUMBER=$(cat count.json | jq .value)
+          echo $BUILD_NUMBER
           flutter build appbundle --release --flavor=${{ inputs.environment }} --build-number=$BUILD_NUMBER -t ${{ inputs.target }} ${{inputs.custom_build_args}}
       - name: Sign app APK
         run: jarsigner --keystore ./android/upload-keystore.jks -storepass $(awk -F "=" '/^keyPassword/{print $NF}' android/key.properties) build/app/outputs/bundle/stagingRelease/app-staging-release.aab $(awk -F "=" '/^keyAlias/{print $NF}' android/key.properties)
