--- a/.github/workflows/flutter_build_android_with_flavors_and_signing.yaml
+++ b/.github/workflows/flutter_build_android_with_flavors_and_signing.yaml
@@ -77,7 +77,7 @@ jobs:
       - name: Android Build
         run: |
           export BUILD_NUMBER=$GITHUB_RUN_NUMBER
-          test -f count.json && export NUMBER=$(cat count.json | jq .value)
+          test -f count.json && export BUILD_NUMBER=$(cat count.json | jq .value)
           echo $BUILD_NUMBER
           flutter build appbundle --release --flavor=${{ inputs.environment }} --build-number=$BUILD_NUMBER -t ${{ inputs.target }} ${{inputs.custom_build_args}}
       - name: Sign app APK
