--- a/.github/workflows/flutter_build_android_with_flavors.yaml
+++ b/.github/workflows/flutter_build_android_with_flavors.yaml
@@ -23,6 +23,10 @@ on:
         required: false
         default: ''
         type: string
+      build_number_api_url:
+        required: false
+        default: ''
+        type: string
 
     secrets:
       android_key_asc:
@@ -61,8 +65,15 @@ jobs:
           gpg -d --passphrase "${{ secrets.android_key_passphrase }}" --batch key.properties.asc > key.properties
           gpg -d --passphrase "${{ secrets.android_keystore_passphrase }}" --batch upload-keystore.jks.asc > upload-keystore.jks
         working-directory: ${{ inputs.app-dir }}/android
+      - name: Fetch Build Number
+        if: ${{ inputs.build_number_api_url != '' }}
+        run: touch count.json && curl ${{ inputs.build_number_api_url }} > count.json && cat count.json | jq .value
       - name: Android Build
-        run: flutter build appbundle --release --flavor=${{ inputs.environment }} --build-number=$GITHUB_RUN_NUMBER -t ${{ inputs.target }} ${{inputs.custom_build_args}}
+        run: |
+          export BUILD_NUMBER=$GITHUB_RUN_NUMBER
+          test -f count.json && export BUILD_NUMBER=$(cat count.json | jq .value)
+          echo $BUILD_NUMBER
+          flutter build appbundle --release --flavor=${{ inputs.environment }} --build-number=$GITHUB_RUN_NUMBER -t ${{ inputs.target }} ${{inputs.custom_build_args}}
       - name: Release APPBUNDLE to internal track
         uses: r0adkll/upload-google-play@v1.0.16
         with:
