--- a/.github/workflows/flutter_build_ios_with_flavors.yaml
+++ b/.github/workflows/flutter_build_ios_with_flavors.yaml
@@ -27,6 +27,10 @@ on:
         required: false
         default: ''
         type: string
+      build_number_api_url:
+        required: false
+        default: ''
+        type: string
 
     secrets:
       ios_provisioning_profile_password:
@@ -92,7 +96,15 @@ jobs:
           # apply provisioning profile
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
-      - run: flutter build ipa --release --flavor=${{ inputs.environment }} --build-number=$GITHUB_RUN_NUMBER --export-options-plist=ios/export_options.plist -t ${{ inputs.target }} ${{inputs.custom_build_args}}
+      - name: Fetch Build Number
+        if: ${{ inputs.build_number_api_url != '' }}
+        run: touch count.json && curl ${{ inputs.build_number_api_url }} > count.json && cat count.json | jq .value
+      - name: Build iOS
+        run: |
+          export BUILD_NUMBER=$GITHUB_RUN_NUMBER
+          test -f count.json && export BUILD_NUMBER=$(cat count.json | jq .value)
+          echo $BUILD_NUMBER
+          flutter build ipa --release --flavor=${{ inputs.environment }} --build-number=$BUILD_NUMBER --export-options-plist=ios/export_options.plist -t ${{ inputs.target }} ${{inputs.custom_build_args}}
         working-directory: ${{ inputs.app-dir }}
       - name: 'Upload app to TestFlight'
         uses: apple-actions/upload-testflight-build@v1
