Changed build number to BUILD_NUMBER env

--- a/.github/workflows/flutter_build_ios_melos.yaml
+++ b/.github/workflows/flutter_build_ios_melos.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Download melos
         run: flutter pub global activate melos
       - name: Melos init
-        run: melos bootstrap && melos get && melos generate
+        run: melos bootstrap && melos get
       - name: Install the Apple certificate and provisioning profile
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.ios_signing_key_asc }}
