--- a/.github/workflows/flutter-build-android.yml
+++ b/.github/workflows/flutter-build-android.yml
@@ -44,11 +44,13 @@ jobs:
   build:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
         with:
-          distribution: 'temurin' # See 'Supported distributions' for available optionsjava-version
+          distribution: 'temurin'
           java-version: '17'
+          cache: 'gradle'
+          
       - name: Install the Apple certificate and provisioning profile
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.ios_signing_key_asc }}
@@ -77,9 +79,13 @@ jobs:
           # apply provisioning profile
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+          
+      # Make sure the stable version of Flutter is available
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
+          # use the build-in cache from Subosito
+          cache: true
 
       - run: sh pre_build.sh ${{ inputs.environment }}
       - run: sh cli.sh --init
@@ -95,7 +101,7 @@ jobs:
           ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD: ${{ secrets.android_keystore_private_key_password }}
           ANDROID_KEYSTORE_PASSWORD: ${{ secrets.android_keystore_password }}
       - name: Release APPBUNDLE to internal track
-        uses: r0adkll/upload-google-play@v1.0.16
+        uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJsonPlainText: ${{ secrets.play_store_gservice_account }}
           releaseFile: ${{inputs.app-dir}}/build/app/outputs/bundle/productionRelease/app-production-release.aab
