--- a/.github/workflows/flutter-build-ios.yml
+++ b/.github/workflows/flutter-build-ios.yml
@@ -29,7 +29,7 @@ jobs:
   build:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Install the Apple certificate and provisioning profile
       env:
         BUILD_CERTIFICATE_BASE64: ${{ secrets.ios_signing_key_asc }}
@@ -58,9 +58,13 @@ jobs:
         # apply provisioning profile
         mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
         cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+        
+    # Make sure the stable version of Flutter is available
     - uses: subosito/flutter-action@v2
       with:
         channel: 'stable'
+        # use the build-in cache from Subosito
+        cache: true
 
     - run: sh pre_build.sh ${{ inputs.environment }}
     - run: sh cli.sh --init
