--- a/.github/workflows/flutter_build_android_melos.yaml
+++ b/.github/workflows/flutter_build_android_melos.yaml
@@ -121,4 +121,5 @@ jobs:
           mappingFile: ${{ github.workspace }}/${{ inputs.app-dir }}/build/app/outputs/mapping/${{ inputs.environment }}Release/mapping.txt
           status: 'draft'
           track: internal
+          changesNotSentForReview: true
           packageName: ${{ inputs.packageName }}
