--- a/.github/workflows/flutter_build_android_without_flavors.yml
+++ b/.github/workflows/flutter_build_android_without_flavors.yml
@@ -39,7 +39,7 @@ on:
         required: false
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
