--- a/.github/workflows/flutter_build_android_with_flavors_and_signing.yaml
+++ b/.github/workflows/flutter_build_android_with_flavors_and_signing.yaml
@@ -23,10 +23,10 @@ on:
         required: false
         default: ''
         type: string
-      build_number_api_url:
+      build_number_starting_point:
         required: false
-        default: ''
-        type: string
+        default: 0
+        type: number
 
     secrets:
       android_key_asc:
@@ -71,12 +71,9 @@ jobs:
           export STORE_FILE=$(awk -F "=" '/^storeFile/{print $NF}' key.properties)
           export BASE64_STORE=$(openssl base64 < upload-keystore.jks | tr -d '\n' | tee upload-keystore.jks.base64.txt)
         working-directory: ${{ inputs.app-dir }}/android
-      - name: Fetch Build Number
-        if: ${{ inputs.build_number_api_url != '' }}
-        run: touch count.json && curl ${{ inputs.build_number_api_url }} > count.json && cat count.json | jq .value
       - name: Android Build
         run: |
-          export BUILD_NUMBER=$GITHUB_RUN_NUMBER
+          export BUILD_NUMBER=$(($GITHUB_RUN_NUMBER + inputs.build_number_starting_point))
           test -f count.json && export BUILD_NUMBER=$(cat count.json | jq .value)
           echo $BUILD_NUMBER
           flutter build appbundle --release --flavor=${{ inputs.environment }} --build-number=$BUILD_NUMBER -t ${{ inputs.target }} ${{inputs.custom_build_args}}
