--- a/.github/workflows/flutter_build_ios_without_flavors.yaml
+++ b/.github/workflows/flutter_build_ios_without_flavors.yaml
@@ -95,7 +95,7 @@ jobs:
           cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
       - name: Build iOS
         run: |
-          export BUILD_NUMBER=$(($GITHUB_RUN_NUMBER + inputs.build_number_starting_point))
+          export BUILD_NUMBER=export BUILD_NUMBER=$(($GITHUB_RUN_NUMBER + ${{ inputs.build_number_starting_point }} ))
           test -f count.json && export BUILD_NUMBER=$(cat count.json | jq .value)
           echo $BUILD_NUMBER
           flutter build ipa --release --build-number=$BUILD_NUMBER --export-options-plist=ios/export_options.plist -t ${{ inputs.target }} ${{inputs.custom_build_args}}
